# AI-Novel-Agent-Studio

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.snow/: permissions.json  settings.json
.snow/notebook/: code.json  code_snapshots.json
apps/desktop/: index.html  package.json  tailwind.config.js
apps/desktop/src/: App.tsx  index.css
apps/desktop/src/components/: AgentPanel.tsx  ExportModal.tsx  GatewayView.tsx  Sidebar.tsx  TelemetryBar.tsx  TimelineForeshadowView.tsx  TipTapEditor.tsx
apps/desktop/src/pages/: AgentWorkflowPage.tsx  ModelSettingsPage.tsx  RagDebugPage.tsx  UsageAuditPage.tsx
apps/desktop/src/types/: novel.ts
config/: providers.json  settings.json
prompts/: editor.md  reviewer.md  summarizer.md  writer.md
scripts/: create-icons.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/config/: providers.json
src-tauri/crates/agent-core/: Cargo.toml
src-tauri/crates/agent-core/src/: agent_trait.rs  bash_agent.rs  compact_agent.rs  context_builder.rs  lib.rs  prompts.rs  review_agent.rs  summary_agent.rs  vision_agent.rs  workflow.rs
src-tauri/crates/gateway/: Cargo.toml
src-tauri/crates/gateway/src/: client.rs  config.rs  dispatcher.rs  embedding.rs  endpoint_resolver.rs  guards.rs  i18n.rs  lib.rs  privacy_mask.rs  reasoning.rs  registry.rs  rerank.rs  responses_api.rs  types.rs
src-tauri/crates/gateway/src/handlers/: chat.rs  config.rs  images.rs  mod.rs  models.rs  rag.rs
src-tauri/crates/gateway/src/providers/: anthropic.rs  gemini.rs  image_gen.rs  mod.rs  openai.rs  responses_api.rs  types.rs
src-tauri/crates/novel-core/: Cargo.toml
src-tauri/crates/novel-core/src/: db.rs  exporter.rs  lib.rs  models.rs
src-tauri/crates/rag-engine/: Cargo.toml
src-tauri/crates/rag-engine/src/: chunker.rs  hybrid.rs  lib.rs
src-tauri/src/: lib.rs  main.rs
(+1 files in other folders)
