[package]
name = "ai-novel-agent-desktop"
version = "0.1.0"
description = "AI Novel Agent Studio & Multi-Model API Gateway"
authors = ["Antigravity"]
edition = "2021"

[workspace]
members = [
  "crates/gateway",
  "crates/novel-core",
  "crates/agent-core",
  "crates/rag-engine",
]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }

gateway = { path = "crates/gateway" }
novel-core = { path = "crates/novel-core" }
agent-core = { path = "crates/agent-core" }
rag-engine = { path = "crates/rag-engine" }
