[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = { version = "0.7", features = ["tokio"] }
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
chrono = "0.4"
uuid = { version = "1.11", features = ["v4"] }
regex = "1.11"
sha2 = "0.10"

